feat: update - week 37

--- a/web/pages/actual/index.mdx
+++ b/web/pages/actual/index.mdx
@@ -1,25 +1,24 @@
 import { Cards, Card } from "nextra/components";
 import { GiForestCamp } from "react-icons/gi";
 import { FaMoon } from "react-icons/fa";
-import { FaWandMagicSparkles, FaSlideshare } from "react-icons/fa6";
+import { FaWandMagicSparkles, FaSlideshare, FaMusic } from "react-icons/fa6";
 
 # Aktuális programok
 
 Az alábbi oldalon láthatod a jelentleg futó programokat. A részletekért kattints a program nevére.
 
 <Cards>
-  <Card icon={<FaMoon />} title="Gólyaest" href="/actual/golyaest" />
-  <Card
-    icon={<GiForestCamp />}
-    title="Kéktúra 14. szakasz"
-    href="/actual/kektura"
-  />
   <Card
     icon={<FaWandMagicSparkles />}
     title="Walk The Wish"
     href="/actual/walkthewish"
   />
+  <Card
+    icon={<FaMusic />}
+    title="Zene Világnapja"
+    href="/actual/zenevilagnap"
+  />
   <Card icon={<FaSlideshare />} title="KiMitTud?" href="/actual/kmt" />
 </Cards>
 
-Programot szervezel az iskolában és szeretnéd meghírdetni? [Írj nekünk](/contact)!
+Programot szervezel az iskolában és szeretnéd meghírdetni? [Írj nekünk!](/https://barnagoz.atlassian.net/servicedesk/customer/portal/3/group/4/create/13)!
