--- a/web/pages/clubs/index.mdx
+++ b/web/pages/clubs/index.mdx
@@ -13,6 +13,7 @@ import { ImHammer2 } from "react-icons/im";
 import { MdVolunteerActivism } from "react-icons/md";
 import { GiForestCamp, GiHealthPotion } from "react-icons/gi";
 import { FaMasksTheater } from "react-icons/fa6";
+import { FaChessKnight } from "react-icons/fa";
 
 # Iskolai közösségek
 
@@ -62,4 +63,5 @@ Alább láthatod az összes közösséget az iskolánkban. Amennyiben találsz n
   <Card icon={<PiPlantFill />} title="Zöld bizottság" href="/clubs/zoldbiz" />
   <Card icon={<ImHammer2 />} title="Debate Club" href="/clubs/debate" />
   <Card icon={<FaMasksTheater />} title="Színjátszó" href="/clubs/szinjatszo" />
+  <Card icon={<FaChessKnight />} title="Sakk - klub" href="/clubs/sakk" />
 </Cards>
