fix: import issues

--- a/web/pages/actual/zenevilagnap.mdx
+++ b/web/pages/actual/zenevilagnap.mdx
@@ -1,4 +1,4 @@
-import { FaFileWaveform } from "react-icons/fa";
+import { FaFileWaveform } from "react-icons/fa6";
 import { Cards, Card } from "nextra/components";
 
 # Zene Világnapja
