--- a/web/pages/clubs/sakk.mdx
+++ b/web/pages/clubs/sakk.mdx
@@ -1,5 +1,5 @@
 import { Cards, Card } from "nextra/components";
-import { FaFileWaveform } from "react-icons/fa";
+import { FaFileWaveform } from "react-icons/fa6";
 import { BiLogoGmail } from "react-icons/bi";
 
 # Sakk - klub
