fix: error with link

--- a/web/pages/actual/index.mdx
+++ b/web/pages/actual/index.mdx
@@ -21,4 +21,4 @@ Az alábbi oldalon láthatod a jelentleg futó programokat. A részletekért kat
   <Card icon={<FaSlideshare />} title="KiMitTud?" href="/actual/kmt" />
 </Cards>
 
-Programot szervezel az iskolában és szeretnéd meghírdetni? [Írj nekünk!](/https://barnagoz.atlassian.net/servicedesk/customer/portal/3/group/4/create/13)!
+Programot szervezel az iskolában és szeretnéd meghírdetni? [Írj nekünk!](https://barnagoz.atlassian.net/servicedesk/customer/portal/3/group/4/create/13)
