feat: add ejg merch

--- a/web/pages/actual/index.mdx
+++ b/web/pages/actual/index.mdx
@@ -3,16 +3,11 @@ import { GiForestCamp } from "react-icons/gi";
 import { FaMoon } from "react-icons/fa";
 import { FaWandMagicSparkles, FaSlideshare, FaMusic } from "react-icons/fa6";
 
-# Aktuális programok
+# Aktuális hírdetések
 
-Az alábbi oldalon láthatod a jelentleg futó programokat. A részletekért kattints a program nevére.
+Az alábbi oldalon láthatod a jelentleg futó hírdetéseket. A részletekért kattints a gombokra.
 
 <Cards>
-  <Card
-    icon={<FaWandMagicSparkles />}
-    title="Walk The Wish"
-    href="/actual/walkthewish"
-  />
   <Card
     icon={<FaMusic />}
     title="Zene Világnapja"
