--- a/web/pages/index.mdx
+++ b/web/pages/index.mdx
@@ -25,12 +25,10 @@ Parlamentjébe, amely havi rendszerességgel ülésezik, és évente egyszer
 nyitott szavazáson választ Diákönkormányzat Elnököt. Az Elnök irányítja
 a Kormányt, amelynek fő felelőssége az iskolai programok megvalósítása.
 
+[![EJG Merch](/merch-ad.png)](/actual/merch)
+
 <Cards>
-  <Card
-    icon={<FaRegCalendarPlus />}
-    title="Aktuális programok →"
-    href="/actual"
-  />
+  <Card icon={<FaRegCalendarPlus />} title="Aktualitások →" href="/actual" />
 </Cards>
 
 ## Általunk szervezett programok
