feat: update frontpage

--- a/web/pages/about.mdx
+++ b/web/pages/about.mdx
@@ -2,6 +2,12 @@
 
 Az Eötvös József Gimnázium Diákönkormányzata, ha nem is a jelenlegi formájában, már több mint fél évszázados múltra tekint vissza. Ezen idő alatt előfordult, hogy elsősorban az érdekképviselet terén működött, más időszakokban pedig inkább a programkoordináció irányításában járt élen.
 
+<img
+  src="/parlament.jpg"
+  alt="Kép a parlamentről"
+  style={{ borderRadius: "10px", marginTop: "20px" }}
+></img>
+
 ## A DÖ működése
 
 A jelenlegi struktúra szerint az osztályok delegáltakat küldenek az Diákönkormányzat Parlamentjébe, amely havi rendszerességgel ülésezik, és évente egyszer nyitott szavazáson választ Diákönkormányzat Elnököt. Az Elnök irányítja a Kormányt, amelynek fő felelőssége az iskolai programok megvalósítása.
