--- a/web/pages/government.mdx
+++ b/web/pages/government.mdx
@@ -2,8 +2,61 @@
 
 ## Elnökség
 
-- **Hargitai Petra** - elnök
-- **Tran Kim** - alelnök
+<div
+  style={{
+    width: "100%",
+    display: "flex",
+    justifyContent: "center",
+    gap: "40px",
+  }}
+>
+  <div
+    style={{
+      display: "flex",
+      flexDirection: "column",
+      width: "fit-content",
+      padding: "10px",
+      alignItems: "center",
+    }}
+  >
+    <img src="/petra.jpg" style={{ borderRadius: "100%", width: "130px" }} />
+    <h3
+      style={{
+        fontSize: "20px",
+        fontWeight: "bold",
+        marginTop: "10px",
+        marginBottom: "-5px",
+        textAlign: "center",
+      }}
+    >
+      Hargitai Petra
+    </h3>
+    <p style={{ fontSize: "14px" }}>DÖ elnök</p>
+  </div>
+  <div
+    style={{
+      display: "flex",
+      flexDirection: "column",
+      width: "fit-content",
+      padding: "10px",
+      alignItems: "center",
+    }}
+  >
+    <img src="/kim.jpg" style={{ borderRadius: "100%", width: "130px" }} />
+    <h3
+      style={{
+        fontSize: "20px",
+        fontWeight: "bold",
+        marginTop: "10px",
+        marginBottom: "-5px",
+        textAlign: "center",
+      }}
+    >
+      Kim Tran
+    </h3>
+    <p style={{ fontSize: "14px" }}>DÖ alelnök</p>
+  </div>
+</div>
 
 ## További kormánytagok
 
