feat: update kmt pic and frontpage

--- a/web/pages/index.mdx
+++ b/web/pages/index.mdx
@@ -15,9 +15,11 @@ import { BsPeopleFill } from "react-icons/bs";
 import { ShowcaseCard } from "../components/showcase-card";
 import Link from "next/link";
 
-# Információk
+# Kezdőlap
 
-## Friss hírek
+Üdvözlünk az Eötvös József Gimnázium Diákönkormányzatának honlapján! Az oldalunkon megtalálhatod a legfrissebb híreinket, információkat a diákönkormányzatunkról, és a rendezvényeinkről. Ha bármilyen kérdésed van, keress minket a [kapcsolat](/contact) oldalon!
+
+## Hírek
 
 <Cards>
   <ShowcaseCard title="KiMitTud?" href="/news/kmt">
@@ -39,7 +41,7 @@ import Link from "next/link";
   </ShowcaseCard>
 </Cards>
 
-[Régebbi hírek →](/news)
+[További híreink →](/news)
 
 ## A DÖ-ről
 
