--- a/web/pages/index.mdx
+++ b/web/pages/index.mdx
@@ -49,7 +49,7 @@ import Link from "next/link";
   arrow={true}
 />
 
-## A Diákönkormányzatról
+## Diákönkormányzat
 
 Az Eötvös József Gimnázium Diákönkormányzata, ha nem is a jelenlegi formájában, már több mint fél évszázados múltra tekint vissza. Ezen idő alatt előfordult, hogy elsősorban az érdekképviselet terén működött, más időszakokban pedig inkább a programkoordináció irányításában járt élen.
 
