--- a/web/pages/index.mdx
+++ b/web/pages/index.mdx
@@ -22,6 +22,13 @@ import Link from "next/link";
 ## Hírek
 
 <Cards>
+  <ShowcaseCard title="E5N Programszervezés" href="/news/e5n-program">
+    <img
+      src="/e5n.jpg"
+      alt="E5N Programszervezés"
+      style={{ aspectRatio: 12 / 7, objectFit: "cover" }}
+    ></img>
+  </ShowcaseCard>
   <ShowcaseCard title="KiMitTud?" href="/news/kmt">
     <img
       src="/kmt.png"
