--- a/web/pages/news/index.mdx
+++ b/web/pages/news/index.mdx
@@ -2,6 +2,7 @@ import { Cards, Card } from "nextra/components";
 import { GiForestCamp } from "react-icons/gi";
 import { FaMoon } from "react-icons/fa";
 import { FaWandMagicSparkles, FaSlideshare, FaMusic } from "react-icons/fa6";
+import { PiHoodieBold } from "react-icons/pi";
 
 # Hírek
 
@@ -15,6 +16,12 @@ Az alábbi oldalon találhatóak a legfrissebb hírek a programokkal kapcsolatba
     icon={<FaSlideshare />}
     title="KiMitTud?"
     href="/news/kmt"
+  />
+  <Card
+    arrow={true}
+    title="Pulóver rendelés"
+    href="https://pullowear.hu/termekkategoria/ejg/"
+    icon={<PiHoodieBold />}
   />
 </Cards>
 
