--- a/web/pages/news/index.mdx
+++ b/web/pages/news/index.mdx
@@ -8,26 +8,11 @@ import { PiHoodieBold } from "react-icons/pi";
 
 Az alábbi oldalon találhatóak a legfrissebb hírek a programokkal kapcsolatban. Emellett egy archívumként is funkcionál, így visszakereshetőek a régebbi hírek is.
 
-## Aktuális hírek
-
-<Cards>
-  <Card
-    arrow={true}
-    icon={<FaSlideshare />}
-    title="KiMitTud?"
-    href="/news/kmt"
-  />
-  <Card
-    arrow={true}
-    title="Pulóver rendelés"
-    href="https://pullowear.hu/termekkategoria/ejg/"
-    icon={<PiHoodieBold />}
-  />
-</Cards>
-
 ## Archívum
 
 <Cards>
+<Card arrow={true} title="KiMitTud?" href="/news/kmt"/>
+<Card arrow={true} title="Pulóver rendelés" href="https://pullowear.hu/termekkategoria/ejg/"/>
   <Card arrow={true} title="Design pályázat" href="/news/merch" />
   <Card arrow={true} title="Zene Világnapja" href="/news/zenevilagnap" />
   <Card arrow={true} title="Karácsonyi koncert" href="/news/walkthewish" />
